--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>EPÒK</title>
+  <meta http-equiv="refresh" content="0; url=homehero.html" />
 </head>
-<body style="background:black; margin:0;">
-</body>
 </html>
