--- a/homehero.html
+++ b/homehero.html
@@ -76,7 +76,7 @@
 
     <!-- Title -->
     <div class="centered fade-in">
-        <h1 style="font-size: 60px; letter-spacing: 4px;">ENTER EPòꓘK</h1>
+        <h1 style="font-size: 60px; letter-spacing: 4px;">ENTER EPòꓘ</h1>
 
         <button class="enter-btn" onclick="startTransition()">
             ENTER
