--- a/homehero.html
+++ b/homehero.html
@@ -71,7 +71,7 @@
 <body>
 
     <!-- Crest -->
-    <img id="crest" src="crest1.png" alt="EPòꓘ Gold Crest" />
+    <img id="crest" src="assets/images/logo/crest-gold.png" alt="EPÒK Gold Crest">
 
     <!-- ENTER TEXT -->
     <div id="enterText">ENTER YOUR EPòꓘ</div>
