--- a/homehero.html
+++ b/homehero.html
@@ -1,95 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EPòꓘ | Enter Your Era</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EPØK | Enter Your Era</title>
 
     <style>
         body {
             margin: 0;
             padding: 0;
-            background-color: black;
-            height: 100vh;
+            background-color: #000;
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: column;
+            height: 100vh;
             overflow: hidden;
-            animation: fadeIn 2s ease-in forwards;
         }
 
-        /* Gold Crest Image */
-        #crest {
-            width: 360px;
-            max-width: 85%;
+        .crest-container {
+            animation: fadeIn 2s ease forwards;
             opacity: 0;
-            animation: crestFade 2.5s ease-out forwards 1s;
         }
 
-        /* ENTER YOUR EPòꓘ text */
-        #enterText {
-            font-family: 'Montserrat', sans-serif;
-            color: white;
-            font-size: 1.7rem;
-            letter-spacing: 3px;
-            margin-top: 35px;
-            opacity: 0;
-            animation: textFade 2s ease-out forwards 2.8s;
+        .crest {
+            width: 340px;
+            height: auto;
+            filter: drop-shadow(0px 0px 25px rgba(255, 191, 0, 0.8));
+            animation: pulse 3.5s infinite ease-in-out;
         }
 
-        /* Fade-in animation */
         @keyframes fadeIn {
-            0% { opacity: 0; }
-            100% { opacity: 1; }
+            0% { opacity: 0; transform: scale(0.9); }
+            100% { opacity: 1; transform: scale(1); }
         }
 
-        /* Crest fade+rise animation */
-        @keyframes crestFade {
-            0% { opacity: 0; transform: translateY(40px); }
-            100% { opacity: 1; transform: translateY(0); }
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.04); }
+            100% { transform: scale(1); }
         }
 
-        /* Text fade+rise animation */
-        @keyframes textFade {
-            0% { opacity: 0; transform: translateY(30px); }
-            100% { opacity: 1; transform: translateY(0); }
-        }
-
-        /* Fade out before redirect */
-        .fadeOut {
-            animation: fadeOut 1.5s forwards;
-        }
-
-        @keyframes fadeOut {
-            0% { opacity: 1; }
-            100% { opacity: 0; }
+        /* Click anywhere to go to the hero landing page */
+        body:hover {
+            cursor: pointer;
         }
     </style>
 </head>
 
-<body>
+<body onclick="location.href='hero.html'">
 
-    <!-- Crest -->
-    <img id="crest" src="assets/images/logo/crest-gold.png" alt="EPÒK Gold Crest">
-
-    <!-- ENTER TEXT -->
-    <div id="enterText">ENTER YOUR EPòꓘ</div>
-
-    <script>
-        // Entire intro duration before redirect
-        const introDuration = 5500; // 5.5 seconds
-
-        // Trigger fade-out + redirect
-        setTimeout(() => {
-            document.body.classList.add("fadeOut");
-
-            setTimeout(() => {
-                window.location.href = "index.html"; // Go to hero page
-            }, 1500);
-
-        }, introDuration);
-    </script>
+    <div class="crest-container">
+        <img src="assets/crest1.png" class="crest" alt="EPØK Crest">
+    </div>
 
 </body>
 </html>
