--- a/homehero.html
+++ b/homehero.html
@@ -50,7 +50,7 @@
 <body onclick="location.href='hero.html'">
 
     <div class="crest-container">
-        <img src="assets/image/crest1.png" class="crest" alt="EPØK Crest">
+        <img src="assets/images/crest1.png" class="crest" alt="EPØK Crest">
     </div>
 
 </body>
