--- a/hero.html
+++ b/hero.html
@@ -88,19 +88,19 @@
 <body>
 
     <!-- HERO BACKGROUND -->
-    <div id="heroBg"></div>
+    <div id="assets/images/9378"></div>
 
     <!-- TAGLINE -->
-    <div id="taglineText"></div>
+    <div id="assets/images/8257"></div>
 
     <!-- CREST BUTTON -->
-    <img id="crestBtn" onclick="location.href='index.html'">
+    <img id="assets/images/8187" onclick="location.href='index.html'">
 
     <script>
         // APPLY IMAGES + TEXT CORRECTLY
-        document.getElementById("heroBg").style.backgroundImage = `url('${HERO_BACKGROUND}')`;
-        document.getElementById("crestBtn").src = CREST_BUTTON;
-        document.getElementById("taglineText").innerText = TAGLINE_TEXT;
+        document.getElementById("assets/images/9378.png").style.backgroundImage = `url('${HERO_BACKGROUND}')`;
+        document.getElementById("assets/images/8187").src = CREST_BUTTON;
+        document.getElementById("assets/images/8257").innerText = TAGLINE_TEXT;
     </script>
 
 </body>
