--- a/hero.html
+++ b/hero.html
@@ -10,9 +10,9 @@
     <!-- ************************************************ -->
 
     <script>
-        const HERO_BACKGROUND = "assets/images/9378.png";      // your full hero art image
-        const CREST_BUTTON   = "assets/images/8187.png";     // your EPÒK crest button
-        const TAGLINE_TEXT   = "assets/images/8257.png"; // using text, not an image
+        const HERO_BACKGROUND = "assets/images/9378.png";   // full hero art
+        const CREST_BUTTON   = "assets/images/crest1.png";  // epok crest
+        const TAGLINE_TEXT   = "SURVIVE. RISE. BECOME.";
     </script>
 
     <!-- ************************************************ -->
@@ -24,84 +24,103 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
+            background: black;
             height: 100vh;
             width: 100vw;
-            background: #000;
         }
 
-        /* HERO BACKGROUND (Your Full Art) */
+        /* FIXED-SIZE BACKGROUND — NO ZOOM, NO RESCALE */
         #heroBg {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 105%;
-            height: 105%;
-            background-size: cover;
-            background-position: center;
+            top: 50%;
+            left: 50%;
+            width: 1920px;              /* <— LOCKED IN PLACE */
+            height: 1080px;             /* <— LOCKED IN PLACE */
+            transform: translate(-50%, -50%);
+            background-size: 100% 100%; /* <— NEVER CHANGES */
+            background-repeat: no-repeat;
             animation: heroMove 18s ease-in-out infinite alternate;
         }
 
+        /* Small cinematic movement ONLY (does NOT resize image) */
         @keyframes heroMove {
-            0% { transform: scale(1) translate(0px, 0px); }
-            50% { transform: scale(1.06) translate(-12px, -8px); }
-            100% { transform: scale(1.03) translate(8px, 6px); }
+            0%   { transform: translate(-50%, -50%) scale(1); }
+            50%  { transform: translate(calc(-50% - 6px), calc(-50% - 4px)) scale(1.01); }
+            100% { transform: translate(calc(-50% + 4px), calc(-50% + 3px)) scale(1.005); }
         }
 
-        /* CREST BUTTON */
-        #crestBtn {
+        /* EPÒK CREST — TOP RIGHT */
+        #crestWrap {
             position: absolute;
-            bottom: 45px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 155px;
+            top: 20px;
+            right: 20px;
+            text-align: center;
+            color: white;
+            font-family: Arial, sans-serif;
+            letter-spacing: 2px;
+        }
+
+        #crestBtn {
+            width: 120px;
             cursor: pointer;
             transition: transform 0.3s ease, filter 0.3s ease;
         }
 
         #crestBtn:hover {
-            transform: translateX(-50%) scale(1.08);
+            transform: scale(1.08);
             filter: drop-shadow(0 0 15px gold);
         }
 
-        /* TAGLINE TEXT */
+        #enterLabel {
+            margin-top: 5px;
+            font-size: 12px;
+        }
+
+        /* TAGLINE BOTTOM CENTER */
         #taglineText {
             position: absolute;
-            top: 8%;
+            bottom: 40px;
+            left: 50%;
+            transform: translateX(-50%);
             width: 100%;
             text-align: center;
             font-family: 'Cinzel', serif;
             color: white;
-            font-size: 34px;
+            font-size: 30px;
             letter-spacing: 3px;
-            text-shadow: 0 0 12px rgba(0,0,0,0.7);
             opacity: 0;
-            animation: textFade 3s ease forwards 1.2s;
+            animation: textFade 3s ease forwards 1s;
+            text-shadow: 0 0 12px rgba(0,0,0,0.7);
         }
 
         @keyframes textFade {
-            0% { opacity: 0; transform: translateY(20px); }
-            100% { opacity: 1; transform: translateY(0); }
+            from { opacity: 0; transform: translate(-50%, 20px); }
+            to { opacity: 1; transform: translate(-50%, 0px); }
         }
     </style>
 </head>
 
 <body>
 
-    <!-- HERO BACKGROUND -->
-    <div id="assets/images/9378"></div>
+    <!-- FIXED BACKGROUND -->
+    <div id="heroBg"></div>
 
     <!-- TAGLINE -->
-    <div id="assets/images/8257"></div>
+    <div id="taglineText"></div>
 
     <!-- CREST BUTTON -->
-    <img id="assets/images/8187" onclick="location.href='index.html'">
+    <div id="crestWrap">
+        <img id="crestBtn" onclick="location.href='index.html'">
+        <div id="enterLabel">ENTER HERE</div>
+    </div>
 
     <script>
-        // APPLY IMAGES + TEXT CORRECTLY
-        document.getElementById("assets/images/9378.png").style.backgroundImage = `url('${HERO_BACKGROUND}')`;
-        document.getElementById("assets/images/8187").src = CREST_BUTTON;
-        document.getElementById("assets/images/8257").innerText = TAGLINE_TEXT;
+        document.getElementById("heroBg").style.backgroundImage = `url('${HERO_BACKGROUND}')`;
+        document.getElementById("crestBtn").src = CREST_BUTTON;
+        document.getElementById("taglineText").innerText = TAGLINE_TEXT;
     </script>
 
 </body>
+</html>
+
 </html>
