--- a/hero.html
+++ b/hero.html
@@ -11,8 +11,8 @@
 
     <script>
         const HERO_BACKGROUND = "assets/images/9378.png";   // full hero art
-        const CREST_BUTTON   = "assets/images/crest1.png";  // epok crest
-        const TAGLINE_TEXT   = "SURVIVE. RISE. BECOME.";
+        const CREST_BUTTON   = "assets/images/8187.png";  // epok crest
+        const TAGLINE_TEXT   = "assets/images/8257.png";
     </script>
 
     <!-- ************************************************ -->
