--- a/homehero.html
+++ b/homehero.html
@@ -54,7 +54,7 @@
             opacity: 0;
             filter: drop-shadow(0 0 25px rgba(255,215,0,0.8));
             animation: crestIntro 1.6s ease-out forwards,
-                       crestFadeOut 1.2s ease-out forwards 1.8s;
+                       crestFadeOut 2.5s ease-out forwards 2.8s;
             z-index: 10;
         }
 
@@ -116,13 +116,13 @@
 <body>
 
     <!-- CREST INTRO -->
-    <img id="intro-crest" src="assets/images/crest1.png">
+    <img id="intro-crest" src="assets/images/8257.png">
 
     <!-- HERO BACKGROUND -->
     <div id="hero-bg"></div>
 
     <!-- BUTTON CREST -->
-    <img id="enter-crest" src="assets/images/crest1.png" onclick="location.href='index.html'">
+    <img id="enter-crest" src="assets/images/8187.png" onclick="location.href='index.html'">
 
     <!-- ENTER TEXT -->
     <div id="enter-text">ENTER HERE</div>
