--- a/homehero.html
+++ b/homehero.html
@@ -116,7 +116,7 @@
 <body>
 
     <!-- CREST INTRO -->
-    <img id="intro-crest" src="assets/images/8257.png">
+    <img id="intro-crest" src="assets/images/crest1.png">
 
     <!-- HERO BACKGROUND -->
     <div id="hero-bg"></div>
