--- a/homehero.html
+++ b/homehero.html
@@ -169,7 +169,7 @@
 
     <!-- EPÒK ENTER BUTTON BOTTOM RIGHT -->
     <div id="enter-wrap">
-        <img id="enter-button" src="assets/images/8187.png" alt="Enter EPÒK">
+       <img id="enter-button" src="assets/images/8187.png?x=1" alt="Enter EPÒK">
         <div id="enter-label">ENTER</div>
     </div>
 
